crates/solidity-v2/testing/snapshots/cst_output/from_v1/SourceUnit/ImportDirective/destructure_import_empty/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected CloseBrace. One of AtKeyword_Unreserved, ErrorKeyword_Unreserved, FinneyKeyword_Unreserved, FromKeyword_Unreserved, GlobalKeyword_Unreserved, Identifier, LayoutKeyword_Unreserved, RevertKeyword_Unreserved, SzaboKeyword_Unreserved, TransientKeyword_Unreserved was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/from_v1/SourceUnit/ImportDirective/destructure_import_empty/input.generated.sol:5:9]
   │
 5 │ import {} from "foo";
   │         ┬  
   │         ╰── Error occurred here.
───╯
